# hls

./: CHANGELOG.md  HLS.L30.T19LDD.2022165T144027.v2.0.json  HLS.S30.T19LDD.2022166T144741.v2.0.json  README.md  docker_env  environment.yml  setup.cfg
.github/ISSUE_TEMPLATE/: bug_report.md
examples/: collection.json  file-list.txt
examples/HLS.L30.T19LDD.2022165T144027.v2.0/: HLS.L30.T19LDD.2022165T144027.v2.0.json
examples/HLS.S30.T19LDD.2022166T144741.v2.0/: HLS.S30.T19LDD.2022166T144741.v2.0.json
examples/L30/: HLS.L30.T19LDD.2022165T144027.v2.0.json
examples/S30/: HLS.S30.T19LDD.2022166T144741.v2.0.json
scripts/: test
src/stactools/hls/: __init__.py  commands.py  constants.py  fragments.py  metadata.py  stac.py  utils.py
src/stactools/hls/fragments/: __init__.py  assets.json  collection.json
src/stactools/hls/fragments/l30/: assets.json
src/stactools/hls/fragments/s30/: assets.json
tests/: __init__.py  test_commands.py  test_module.py  test_stac.py
