[metadata]
name = stactools-hls
version = attr: stactools.hls.__version__
description = stactools package for Harmonized Landsat Sentinel-2 data
long_description = file: README.md
long_description_content_type = text/markdown
author = Preston Hartzell
author_email = preston.hartzell@gmail.com
url = https://github.com/stactools-packages/hls
project_urls =
    Issues = https://github.com/stactools-packages/hls/issues
keywords =
    stactools
    pystac
    catalog
    STAC
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
include_package_data = True
package_dir =
    = src
packages = find_namespace:
install_requires =
    stactools >= 0.3.1
    untangle >= 1.2.1

[options.packages.find]
where = src

[options.package_data]
stactools.hls = fragments/*.json